# RAGmodel

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SETUP.md  dev.ps1  dev.sh  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  prod.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: __init__.py  client.py
docs/: ADR-001-why-weaviate.md  ADR-002-byov.md  ARCHITECTURE.md  MIGRATION.md  ROADMAP.md
docs/adr/: 001-why-qdrant.md
gemini/: .dockerignore  .gitignore  docker-compose.yml  requirements.txt
gemini/client/: __init__.py
gemini/service/: main.py  models.py
gemini/service/core/: __init__.py  chunking.py  embedder.py
observability/grafana/dashboards/: ragmodel-overview.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
ops/grafana/dashboards/: rag-service.json
ops/grafana/provisioning/dashboards/: default.yml
ops/prometheus/: prometheus.yml
scripts/: smoke.py
service/: __init__.py  config.py  logging_config.py  main.py  models.py
service/core/: __init__.py  chunking.py  embedder.py  sparse.py  vectorstore.py  weaviate_store.py
service/static/: index.html
tests/: README.md  conftest.py  test_api.py  test_chunking.py  test_config.py  test_embedder.py  test_main_smoke.py  test_vectorstore.py  test_weaviate_store.py
