[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragmodel"
version = "2.0.0"
description = "Production-grade multi-tenant RAG service on Qdrant with hybrid search, observability, and OSS embeddings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sandesh Neupane"}
]
keywords = ["rag", "embeddings", "qdrant", "vector-database", "fastapi", "hybrid-search", "multi-tenant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "fastembed>=0.4.0,<0.5.0",
    "numpy>=1.26.0,<2.0.0",
    "qdrant-client>=1.12.0,<2.0.0",
    "loguru>=0.7.2,<0.8.0",
    "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "requests>=2.32.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
ragmodel = "service.main:run_service"

[project.urls]
Homepage = "https://github.com/neupanesandesh/RAGmodel"
Repository = "https://github.com/neupanesandesh/RAGmodel"

[tool.setuptools]
packages = ["client", "service", "service.core"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
